Fix searchButton alignment

--- a/application/static/css/search.css
+++ b/application/static/css/search.css
@@ -28,5 +28,5 @@
 
 #searchButton{
     position:absolute;
-    margin: 5px 10px;
+    margin: 8px 0px;
 }
